<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculadoraReal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/uiResult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/zero_num"
            android:textAlignment="viewEnd"
            android:textSize="36sp"
            tools:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sevenBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@color/backGroundNormal"
            android:text="@string/seven_num"
            android:textColor="@color/blackText"
            android:textSize="24sp" />

        <Button
            android:id="@+id/eightBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textColor="@color/blackText"
            android:background="@color/backGroundNormal"
            android:text="@string/eight_num"
            android:textSize="24sp" />

        <Button
            android:id="@+id/nineBtn"
            android:layout_width="match_parent"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:onClick="onClick"
            android:textColor="@color/blackText"
            android:background="@color/backGroundNormal"
            android:text="@string/nine_num" />

        <Button
            android:id="@+id/divBtn"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:onClick="onClick"
            android:textColor="@color/blackText"
            android:background="@color/colorAccent"
            android:text="@string/div" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fourBtn"
            android:layout_width="match_parent"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_height="match_parent"
            android:background="@color/backGroundNormal"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textSize="24sp"
            android:textColor="@color/blackText"
            android:text="@string/four_num" />

        <Button
            android:id="@+id/fiveBtn"
            android:layout_width="match_parent"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_height="match_parent"
            android:onClick="onClick"
            android:layout_weight="1"
            android:background="@color/backGroundNormal"
            android:textSize="24sp"
            android:textColor="@color/blackText"
            android:text="@string/five_num" />

        <Button
            android:id="@+id/sixBtn"
            android:layout_width="match_parent"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_height="match_parent"
            android:background="@color/backGroundNormal"
            android:layout_weight="1"
            android:textSize="24sp"
            android:onClick="onClick"
            android:textColor="@color/blackText"
            android:text="@string/six_num" />

        <Button
            android:id="@+id/mulBtn"
            android:layout_width="match_parent"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:onClick="onClick"
            android:textColor="@color/blackText"
            android:background="@color/colorAccent"
            android:text="@string/mul" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/oneBtn"
            android:layout_width="match_parent"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_height="match_parent"
            android:background="@color/backGroundNormal"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textSize="24sp"
            android:textColor="@color/blackText"
            android:text="@string/one_num" />

        <Button
            android:id="@+id/twoBtn"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backGroundNormal"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textSize="24sp"
            android:textColor="@color/blackText"
            android:text="@string/two_num" />

        <Button
            android:id="@+id/threeBtn"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@color/backGroundNormal"
            android:textSize="24sp"
            android:textColor="@color/blackText"
            android:text="@string/three_num" />

        <Button
            android:id="@+id/resBtn"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:onClick="onClick"
            android:textColor="@color/blackText"
            android:background="@color/colorAccent"
            android:text="@string/res" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clrBtn"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@color/backGroundNormal"
            android:textSize="20sp"
            android:textColor="@color/blackText"
            android:text="@string/clear" />

        <Button
            android:id="@+id/zeroBtn"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backGroundNormal"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textSize="24sp"
            android:textColor="@color/blackText"
            android:text="@string/zero_num" />

        <Button
            android:id="@+id/pointBtn"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backGroundNormal"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textSize="24sp"
            android:textColor="@color/blackText"
            android:text="@string/point" />

        <Button
            android:id="@+id/sumBtn"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:onClick="onClick"
            android:textColor="@color/blackText"
            android:background="@color/colorAccent"
            android:text="@string/sum" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/equalBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textSize="24sp"
            android:textColor="@color/blackText"
            android:background="@color/colorAccent"
            android:text="@string/equal" />
    </LinearLayout>

</LinearLayout>